<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_portfolio"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.optimalcities.portfolio.PortfolioActivity"
    tools:showIn="@layout/activity_portfolio"
    >

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/popular_movies"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/app_launch_button_text"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/activity_vertical_margin"

        android:contentDescription="@string/launch_popular_movies_app"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:id="@+id/stock_hawk"
        android:layout_below="@+id/popular_movies"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/app_launch_button_text"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/activity_vertical_margin"

        android:contentDescription="@string/launch_stock_hawk_app"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/stock_hawk"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"

        android:textSize="@dimen/app_launch_button_text"
        android:layout_margin="@dimen/activity_vertical_margin"

        android:contentDescription="@string/launch_build_it_bigger_app"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:id="@+id/make_your_app_material"
        android:layout_below="@+id/build_it_bigger"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"

        android:textSize="@dimen/app_launch_button_text"
        android:layout_margin="@dimen/activity_vertical_margin"

        android:contentDescription="@string/launch_material_design_app"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:id="@+id/go_ubiquitous"
        android:layout_below="@+id/make_your_app_material"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"

        android:textSize="@dimen/app_launch_button_text"
        android:layout_margin="@dimen/activity_vertical_margin"

        android:contentDescription="@string/launch_go_ubiquitous_app"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/capstone"
        android:layout_below="@+id/go_ubiquitous"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textSize="@dimen/app_launch_button_text"

        android:contentDescription="@string/launch_capstone_app"/>
</RelativeLayout>
